--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ pytest==8.4.2
 # APIs y servicios web
 
 fastapi==0.116.1
+uvicorn[standard]==0.22.0
 
 # Mensajes de error enriquecidos
 loguru==0.7.2
