add models endpoint and refactor train, predict and endpoints to launch mlflow server, intercat through a mlflow client and retrieve model from mlflow structure

--- a/params.yaml
+++ b/params.yaml
@@ -18,6 +18,7 @@ data:
     y_train_file: "${paths.processed}/ytrain_processed.csv"
     y_test_file: "${paths.processed}/ytest_processed.csv"
   prediction_file: "${paths.prediction}/predictions.csv"
+  mlflow_pid_file: "${paths.models}/mlflow.pid"
 
 dvc:
   gdrive_remote_url: "${oc.env:GDRIVE_REMOTE_URL, ''}"
