--- a/params.yaml
+++ b/params.yaml
@@ -5,6 +5,7 @@ paths:
   processed: "${paths.data}/processed"
   external: "${paths.data}/external"
   prediction: "${paths.data}/prediction"
+  synthetic: "${paths.data}/synthetic"
   models: "./models"
   reports: "./reports"
   figures: "${paths.reports}/figures"
@@ -18,6 +19,7 @@ data:
     y_train_file: "${paths.processed}/ytrain_processed.csv"
     y_test_file: "${paths.processed}/ytest_processed.csv"
   prediction_file: "${paths.prediction}/predictions.csv"
+  synthetic_data_file: "${paths.synthetic}/synthetic_data.csv"
   mlflow_pid_file: "${paths.models}/mlflow.pid"
 
 dvc:
@@ -49,6 +51,9 @@ preprocessing:
   gmm_n_components: 8
   gmm_random_state: 42
   gmm_file: "${paths.models}/gmm.pkl"
+
+synthetic:
+  n_samples: 5000
 
 training:
   mlflow_tracking_uri: "${oc.env:MLFLOW_TRACKING_URI, file:./mlruns}"
