--- a/params.yaml
+++ b/params.yaml
@@ -54,6 +54,7 @@ preprocessing:
 
 synthetic:
   n_samples: 5000
+  apply_drift: true
 
 training:
   mlflow_tracking_uri: "${oc.env:MLFLOW_TRACKING_URI, file:./mlruns}"
